// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should add directories 1`] = `
{
  "items": [],
  "name": "root",
  "path": "/",
  "relativePath": "/",
  "relativePathName": "",
  "subDirectory": {
    "a": {
      "items": [],
      "name": "a",
      "parent": [Circular],
      "path": "/a/",
      "relativePath": "a/",
      "relativePathName": "a",
      "subDirectory": {
        "b": {
          "items": [],
          "name": "b",
          "parent": [Circular],
          "path": "/a/b/",
          "relativePath": "b/",
          "relativePathName": "b",
          "subDirectory": {},
        },
      },
    },
  },
}
`;

exports[`test > paths to tree 1`] = `
{
  "items": [],
  "name": "root",
  "path": "/",
  "relativePath": "/",
  "relativePathName": "",
  "subDirectory": {
    "a": {
      "items": [
        {
          "data": undefined,
          "ext": "ts",
          "filename": "index",
          "isEntry": true,
          "parent": [Circular],
          "path": "a/index.ts",
        },
        {
          "data": undefined,
          "ext": "ts",
          "filename": "b",
          "isEntry": false,
          "parent": [Circular],
          "path": "a/b.ts",
        },
      ],
      "name": "a",
      "parent": [Circular],
      "path": "/a/",
      "relativePath": "a/",
      "relativePathName": "a",
      "subDirectory": {
        "b": {
          "items": [
            {
              "data": undefined,
              "ext": "js",
              "filename": "index",
              "isEntry": true,
              "parent": [Circular],
              "path": "a/b/index.js",
            },
          ],
          "name": "b",
          "parent": [Circular],
          "path": "/a/b/",
          "relativePath": "b/",
          "relativePathName": "b",
          "subDirectory": null,
        },
      },
    },
    "src": {
      "items": [
        {
          "data": undefined,
          "ext": "ts",
          "filename": "index",
          "isEntry": true,
          "parent": [Circular],
          "path": "src/index.ts",
        },
        {
          "data": undefined,
          "ext": "ts",
          "filename": "foo",
          "isEntry": false,
          "parent": [Circular],
          "path": "src/foo.ts",
        },
      ],
      "name": "src",
      "parent": [Circular],
      "path": "/src/",
      "relativePath": "src/",
      "relativePathName": "src",
      "subDirectory": {
        "a": {
          "items": [
            {
              "data": undefined,
              "ext": "ts",
              "filename": "index",
              "isEntry": true,
              "parent": [Circular],
              "path": "src/a/index.ts",
            },
          ],
          "name": "a",
          "parent": [Circular],
          "path": "/src/a/",
          "relativePath": "a/",
          "relativePathName": "a",
          "subDirectory": {
            "b": {
              "items": [
                {
                  "data": undefined,
                  "ext": "ts",
                  "filename": "index",
                  "isEntry": true,
                  "parent": [Circular],
                  "path": "src/a/b/index.ts",
                },
              ],
              "name": "b",
              "parent": [Circular],
              "path": "/src/a/b/",
              "relativePath": "b/",
              "relativePathName": "b",
              "subDirectory": {
                "d": {
                  "items": [
                    {
                      "data": undefined,
                      "ext": "ts",
                      "filename": "index",
                      "isEntry": true,
                      "parent": [Circular],
                      "path": "src/a/b/d/index.ts",
                    },
                  ],
                  "name": "d",
                  "parent": [Circular],
                  "path": "/src/a/b/d/",
                  "relativePath": "d/",
                  "relativePathName": "d",
                  "subDirectory": null,
                },
              },
            },
          },
        },
        "b": {
          "items": [
            {
              "data": undefined,
              "ext": "js",
              "filename": "index",
              "isEntry": true,
              "parent": [Circular],
              "path": "src/b/index.js",
            },
          ],
          "name": "b",
          "parent": [Circular],
          "path": "/src/b/",
          "relativePath": "b/",
          "relativePathName": "b",
          "subDirectory": {
            "c": {
              "items": [
                {
                  "data": undefined,
                  "ext": "ts",
                  "filename": "index",
                  "isEntry": true,
                  "parent": [Circular],
                  "path": "src/b/c/index.ts",
                },
              ],
              "name": "c",
              "parent": [Circular],
              "path": "/src/b/c/",
              "relativePath": "c/",
              "relativePathName": "c",
              "subDirectory": null,
            },
          },
        },
      },
    },
  },
}
`;

exports[`test > walker 1`] = `
[
  {
    "data": undefined,
    "ext": "ts",
    "filename": "index",
    "isEntry": true,
    "parent": {
      "items": [Circular],
      "name": "b",
      "parent": {
        "items": [
          {
            "data": undefined,
            "ext": "ts",
            "filename": "index",
            "isEntry": true,
            "parent": [Circular],
            "path": "src/a/index.ts",
          },
        ],
        "name": "a",
        "parent": {
          "items": [
            {
              "data": undefined,
              "ext": "ts",
              "filename": "index",
              "isEntry": true,
              "parent": [Circular],
              "path": "src/index.ts",
            },
            {
              "data": undefined,
              "ext": "ts",
              "filename": "foo",
              "isEntry": false,
              "parent": [Circular],
              "path": "src/foo.ts",
            },
          ],
          "name": "src",
          "parent": {
            "items": [],
            "name": "root",
            "path": "/",
            "relativePath": "/",
            "relativePathName": "",
            "subDirectory": {
              "a": {
                "items": [
                  {
                    "data": undefined,
                    "ext": "ts",
                    "filename": "index",
                    "isEntry": true,
                    "parent": [Circular],
                    "path": "a/index.ts",
                  },
                  {
                    "data": undefined,
                    "ext": "ts",
                    "filename": "b",
                    "isEntry": false,
                    "parent": [Circular],
                    "path": "a/b.ts",
                  },
                ],
                "name": "a",
                "parent": [Circular],
                "path": "/a/",
                "relativePath": "a/",
                "relativePathName": "a",
                "subDirectory": {
                  "b": {
                    "items": [
                      {
                        "data": undefined,
                        "ext": "js",
                        "filename": "index",
                        "isEntry": true,
                        "parent": [Circular],
                        "path": "a/b/index.js",
                      },
                    ],
                    "name": "b",
                    "parent": [Circular],
                    "path": "/a/b/",
                    "relativePath": "b/",
                    "relativePathName": "b",
                    "subDirectory": null,
                  },
                },
              },
              "src": [Circular],
            },
          },
          "path": "/src/",
          "relativePath": "src/",
          "relativePathName": "src",
          "subDirectory": {
            "a": [Circular],
            "b": {
              "items": [
                {
                  "data": undefined,
                  "ext": "js",
                  "filename": "index",
                  "isEntry": true,
                  "parent": [Circular],
                  "path": "src/b/index.js",
                },
              ],
              "name": "b",
              "parent": [Circular],
              "path": "/src/b/",
              "relativePath": "b/",
              "relativePathName": "b",
              "subDirectory": {
                "c": {
                  "items": [
                    {
                      "data": undefined,
                      "ext": "ts",
                      "filename": "index",
                      "isEntry": true,
                      "parent": [Circular],
                      "path": "src/b/c/index.ts",
                    },
                  ],
                  "name": "c",
                  "parent": [Circular],
                  "path": "/src/b/c/",
                  "relativePath": "c/",
                  "relativePathName": "c",
                  "subDirectory": null,
                },
              },
            },
          },
        },
        "path": "/src/a/",
        "relativePath": "a/",
        "relativePathName": "a",
        "subDirectory": {
          "b": [Circular],
        },
      },
      "path": "/src/a/b/",
      "relativePath": "b/",
      "relativePathName": "b",
      "subDirectory": {
        "d": {
          "items": [
            {
              "data": undefined,
              "ext": "ts",
              "filename": "index",
              "isEntry": true,
              "parent": [Circular],
              "path": "src/a/b/d/index.ts",
            },
          ],
          "name": "d",
          "parent": [Circular],
          "path": "/src/a/b/d/",
          "relativePath": "d/",
          "relativePathName": "d",
          "subDirectory": null,
        },
      },
    },
    "path": "src/a/b/index.ts",
  },
]
`;
